--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 body{
     background-color: rgb(165, 165, 155);
-   
 }
+/* main section */
 .container{
     background-color: aliceblue;
     height: auto;
@@ -17,9 +17,14 @@ body{
     margin: auto;
     margin-top: 6rem;
 }
+/* headings */
 h2{
     text-align: center;
     margin: 0.5rem;
+}
+h3{
+    font-size: 1.5rem;
+    text-align: center;  
 }
 
 #current-time{
@@ -29,8 +34,6 @@ h2{
     text-align: center;
 
 }
-
-
 .user-input{
     display: flex;
     flex-direction: row;
@@ -48,7 +51,7 @@ select{
     border: none;
     padding: 2px;
 }
-
+/* button */
 button{
     height: auto;
     padding: 2px;
@@ -66,11 +69,7 @@ button:hover{
 #delete-button:hover{
     background-color: red;
 }
-h3{
-    font-size: 1.5rem;
-    text-align: center;
-    
-}
+
 ul{
     padding-bottom: 2rem;
 }
@@ -92,6 +91,7 @@ li{
     font-weight: 800;
 }
 
+/* for responsive design */
 @media(max-width:480px){
     body{
         background-color: aliceblue;
