--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ button{
 button:hover{
     box-shadow: 5px 5px 10px 5px rgb(60, 59, 59);
 }
+#delete-button{
+    height: 2rem;
+    font-size: 1.2rem;
+}
 #delete-button:hover{
     background-color: red;
 }
