--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(165, 165, 155);
+    background-color: white;
 }
 /* main section */
 .container{
@@ -12,10 +12,11 @@ body{
     height: auto;
     min-height: 10rem;
     width: 30%;
-    border: 2px solid black;
+    border: 2px solid grey;
     border-radius: 4rem;
     margin: auto;
     margin-top: 6rem;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 /* headings */
 h2{
@@ -64,7 +65,8 @@ button{
     font-size: 1rem;
 }
 button:hover{
-    box-shadow: 5px 5px 10px 5px rgb(60, 59, 59);
+    box-shadow: 5px 5px 10px 5px rgb(219, 18, 178);
+    font-size: 1.3rem;
 }
 #delete-button{
     height: 2rem;
@@ -72,6 +74,7 @@ button:hover{
 }
 #delete-button:hover{
     background-color: red;
+    box-shadow: none;
 }
 
 ul{
