--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     border-radius: 4rem;
     margin: auto;
     margin-top: 6rem;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 /* headings */
 h2{
@@ -45,7 +45,10 @@ input{
     height: 2rem;
     border-radius: 1rem;
     margin: 2px;
-    padding: 3px;
+    padding: 2px;
+}
+input::placeholder{
+   padding-left: 1rem;
 }
 select{
     font-size: 1.2rem;
@@ -60,17 +63,23 @@ button{
     min-width: 5rem;
     border-radius: 1rem;
     margin-left: 1rem;
-    background-color: blueviolet;
-    color: aliceblue;
+    background-color: aliceblue;
+    color: slateblue;
     font-size: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    
 }
+
 button:hover{
-    box-shadow: 5px 5px 10px 5px rgb(219, 18, 178);
+    background-color: slateblue;
+    color: aliceblue;
     font-size: 1.3rem;
 }
 #delete-button{
     height: 2rem;
     font-size: 1.2rem;
+    padding: 2px;
+    
 }
 #delete-button:hover{
     background-color: red;
@@ -107,6 +116,7 @@ li{
         margin-top: 4rem;
         width: 100%;
         border: none;  
+        box-shadow: none;
     }
     .user-input{
         display: flex;
