--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ input{
     border-radius: 1rem;
     margin: 2px;
     padding: 2px;
+    text-align: center;
 }
 input::placeholder{
    padding-left: 1rem;
@@ -64,7 +65,7 @@ button{
     border-radius: 1rem;
     margin-left: 1rem;
     background-color: aliceblue;
-    color: slateblue;
+    color: rgb(143, 128, 215);
     font-size: 1rem;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     
@@ -124,6 +125,10 @@ li{
        justify-content: center;
        margin: 1rem;
     }
+    
+input::placeholder{
+    padding-left: 0.5rem;
+ }
     h3, h2{
         font-size: 2rem;
     }
