--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* body background color */
 body{
     background-color: white;
 }
@@ -11,7 +12,7 @@ body{
     background-color: aliceblue;
     height: auto;
     min-height: 10rem;
-    width: 30%;
+    width: 35%;
     border: 2px solid grey;
     border-radius: 4rem;
     margin: auto;
@@ -35,6 +36,7 @@ h3{
     text-align: center;
 
 }
+/* input */
 .user-input{
     display: flex;
     flex-direction: row;
@@ -44,23 +46,31 @@ h3{
 input{
     height: 2rem;
     border-radius: 1rem;
-    margin: 2px;
+    margin: 0 2px 0 2px;
+    font-size: 1rem;
     padding: 2px;
     text-align: center;
+    width: 4rem;
+    border:1.8px solid rgb(23, 22, 22);
 }
 input::placeholder{
    padding-left: 1rem;
 }
 select{
-    font-size: 1.2rem;
-    border: none;
+    font-size: 1rem;
+    height: 2rem;
+    width: 4rem;
+    border-radius: 1rem;
+    margin: 0 2px 0 2px;
     padding: 2px;
+    text-align: center;
+    border:1.8px solid rgb(23, 22, 22);
 }
 /* button */
 button{
-    height: auto;
     padding: 2px;
     width: auto;
+    height: 2rem;
     min-width: 5rem;
     border-radius: 1rem;
     margin-left: 1rem;
@@ -90,6 +100,7 @@ button:hover{
 ul{
     padding-bottom: 2rem;
 }
+/* alarm list */
 .set-alarms-list{
     display: flex;
     flex-direction: column;
@@ -121,16 +132,26 @@ li{
     }
     .user-input{
         display: flex;
-        flex-direction: row;
+        flex-wrap: wrap;
        justify-content: center;
+       align-items: center;
        margin: 1rem;
+       
     }
-    
+  #set{
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
+    #stop{
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
 input::placeholder{
     padding-left: 0.5rem;
  }
     h3, h2{
         font-size: 2rem;
+
     }
 }
 
